tests/pass/array_partial_initialized_index_use.kl
fn inisiu() {
    nter[2] a;
    a[1] = 5;
    mostra(a[1]);
}
