tests/fail/fail_undeclared_function.kl
fn inisiu() {
    nter x = missingFunc(3);
}
